add background to fish game

--- a/game_web/src/App.css
+++ b/game_web/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./img/background_2.gif');
+  background-image: url('./img/background.gif');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
