--- a/game_web/src/Fish/style.css
+++ b/game_web/src/Fish/style.css
@@ -7,11 +7,20 @@
     }
 }
 
+@keyframes bannermove {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
 .fish__screen {
     height: 80vh;
     width: 120vh;
     background-color: #D2C9E0;
-    color: black;
+    color: white;
     position: relative;
     border-radius: 10px;
     border: 2px solid black;
@@ -32,40 +41,62 @@
 
 .fish__ground {
     height: 16vh;
-    background-color: #4A4453;
-    position: relative;
+    background-color: #0280bb;
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
-.dust__dot {
-    position: absolute;
-    background-color: wheat;
+.fish__ground > article {
+    width: 200%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
-.fish__sky {
+
+.fish__ground > article > img {
+    max-width: 50%;
+    height: 100%;
+}
+
+.sand__dot {
+    position: absolute;
+    background-color: #cfa23b;
+}
+
+.fish__sea {
     height: 64vh;
     background-color: whitesmoke;
-    position: relative;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+    position: relative;
+}
+
+.fish__sea > img {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .fish__score {
     position: absolute;
     font-size: 1rem;
-    top: 2%;
-    left: 75%;
+    top: 13%;
+    left: 2%;
 }
 
 .fish__highscore {
     position: absolute;
-    top: 6%;
-    left: 75%;
+    top: 17%;
+    left: 2%;
     font-size: 1rem;
 }
 
