--- a/game_web/src/Fish/style.css
+++ b/game_web/src/Fish/style.css
@@ -40,8 +40,8 @@
 }
 
 .fish__ground {
-    height: 16vh;
-    background-color: #0280bb;
+    height: 12vh;
+    background-color: transparent;
     position: absolute;
     left: 0;
     right: 0;
@@ -58,7 +58,7 @@
 
 
 .fish__ground > article > img {
-    max-width: 50%;
+    width: 50%;
     height: 100%;
 }
 
@@ -77,30 +77,35 @@
     position: relative;
 }
 
-.fish__sea > img {
+.fish__sea > .undersea__gif {
     position: absolute;
     bottom: 0;
+    top: -3rem;
     left: 0;
-    right: 0;
     width: 100%;
-    height: 100%;
+    opacity: 0.9;
 }
 
 .fish__score {
     position: absolute;
     font-size: 1rem;
-    top: 13%;
+    top: 5%;
     left: 2%;
+    color: darkblue;
+    z-index: 10;
 }
 
 .fish__highscore {
     position: absolute;
-    top: 17%;
+    top: 9%;
     left: 2%;
     font-size: 1rem;
+    color: darkblue;
+    z-index: 10;
 }
 
-.fish__dot {
+.dot {
     position: absolute;
-    background-color: black;
+    height: 2vh;
+    width: 2vh;
 }
