--- a/game_web/src/Fish/style.css
+++ b/game_web/src/Fish/style.css
@@ -109,3 +109,8 @@
     height: 2vh;
     width: 2vh;
 }
+
+.fish__screen > .fish__gameover {
+    font-size: 3rem;
+    animation: fadein 0.6s ease-in 0s 1 normal forwards;
+}
