--- a/game_web/src/Home/style.css
+++ b/game_web/src/Home/style.css
@@ -50,8 +50,9 @@
 .homepage {
     height: 100vh;
     width: 100vw;
+    padding: 2vh;
     color: white;
-    font-size: 3rem;
+    font-size: 4.5vh;
     font-family: arcade;
     text-align: center;
     display: flex;
@@ -62,39 +63,41 @@
 }
 
 .welcome__text {
-    padding: 3rem;
+    padding: 3vh;
     animation: 
         fadein 1.5s linear 0s 1 normal none;
 }
 
 form {
-    display: grid;
-    grid-template-rows: auto auto auto;
-    row-gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5vh;
     background-color: white;
     color: black;
-    padding: 2rem 3rem;
+    padding: 1.5vh 2.5vh;
+    font-size: 2vh;
     border-radius: 10px;
-    margin-top: 5rem;
+    margin-top: 8vh;
     animation: 
         slidedown 1s ease-out 0s 1 normal forwards,
         fadein 1s ease-out 0s 1 normal forwards;
 }
 
 form>h6 {
-    padding: 1rem;
+    padding: 1vh;
+    font-size: 3vh;
 }
 
 form>.mb-3 {
-    font-size: 1.5rem;
+    font-size: 1.7vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    column-gap: 2rem;
+    column-gap: 1vh;
 }
 
 form>.mb-3>input {
-    padding: 0.5rem 1rem;
+    padding: 0.8vh 1vh;
     width: 70%;
     background-color: black;
     color: white;
@@ -103,12 +106,13 @@ form>.mb-3>input {
 }
 
 form>.mb-3>button {
-    padding: 0.2rem;
+    padding: 0.5vh;
     width: 30%;
     cursor: pointer;
     opacity: 0.7;
     background-color: black;
     color: white;
+    border-radius: 5px;
 }
 
 form>.mb-3>button:hover {
@@ -121,12 +125,12 @@ form>.button__wrapper {
 }
 
 form>.form__error {
-    font-size: 1rem;
+    font-size: 1.6vh;
     color: red;
 }
 
 form>.form__success {
-    font-size: 1rem;
+    font-size: 1.6vh;
     color: green;
 }
 
@@ -134,15 +138,17 @@ form>.form__success {
 
 .gamepage {
     width: 100%;
+    height: 100%;
+    margin-top: 4vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    font-size: 2.4rem;
+    font-size: 4vh;
 }
 
 .gamepage>h4 {
-    padding: 1rem;
+    padding: 1vh;
     animation: fadein 1s ease-out 0s 1 normal forwards;
 }
 
@@ -166,7 +172,7 @@ form>.form__success {
 }
 
 .game__container {
-    padding: 4rem;
+    padding: 4vh;
     width: 50%;
     display: grid;
     grid-template-columns: auto auto;
@@ -175,15 +181,14 @@ form>.form__success {
 }
 
 .game__container>.game__item {
-    width: 70%;
-    height: 90%;
+    height: 100%;
     background-color: #dcdee6;
     color: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    font-size: 1.1rem;
+    font-size: 2vh;
     border-radius: 20px;
     cursor: pointer;
     opacity: 0;
@@ -200,7 +205,7 @@ form>.form__success {
 }
 
 .game__name {
-    padding: 1rem;
+    padding: 1.4vh;
     font-weight: bold;
     color: #060633;
 }
@@ -210,8 +215,8 @@ form>.form__success {
 }
 
 .game__icon {
-    max-width: 100%;
-    height: 20rem;
+    width: 100%;
+    height: 80%;
 }
 
 .game__icon>img {
@@ -221,7 +226,8 @@ form>.form__success {
 }
 
 .game_highscore {
-    padding: 1rem;
+    padding: 1.3vh;
+    font-size: 1.7vh;
     color: #060633;
 }
 
@@ -240,21 +246,22 @@ form>.form__success {
     width: 100%;
     place-items: center;
     position: relative;
-    padding: 3rem;
-    font-size: 1.6rem;
+    padding: 3vh;
+    font-size: 2.4vh;
     animation: fadein 1s ease-in 0s 1 normal forwards;
 }
 
 .navigation>h1 {
-    font-size: 4rem;
+    font-size: 5vh;
 }
 
 .nav--back {
     position: absolute;
-    top: 4rem;
-    left: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 3vh;
     display: flex;
-    gap: 1rem;
+    gap: 1.5vh;
     cursor: pointer;
     opacity: 0.7;
 }
@@ -265,6 +272,7 @@ form>.form__success {
 
 .nav--logout {
     position: absolute;
-    top: 4rem;
-    right: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 3vh;
 }
